<resources>
    <string name="app_name">WorkOut</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="Almonds">Almonds</string>
    <string name="Amlajuice">Amla juice</string>
    <string name="Applewatermelonpapayastrawberry">Apple, watermelon, papaya, strawberry</string>
    <string name="BoiledvegetablesSpinachbeanscabbagetomato">Boiled vegetables(Spinach, beans, cabbage, tomato)</string>
    <string name="Brownbread">Brown bread</string>
    <string name="Brownbreadvegsandwich">Brown bread veg sandwich</string>
    <string name="Carrotcucumbercabbagetomatobeansspinachlettuce">Carrot, cucumber, cabbage, tomato, beans, spinach, lettuce</string>
    <string name="Chickenbreasts">Chicken breasts</string>
    <string name="Chickensoup">Chicken soup</string>
    <string name="Cornflakeswithskimmedmilk">Corn flakes with skimmed milk</string>
    <string name="Dairyproducts">DAIRY PRODUCTS</string>
    <string name="Drinks">DRINKS</string>
    <string name="Eggs">Eggs</string>
    <string name="FishTunaorsalmon">Fish-Tuna or salmon</string>
    <string name="Fruits">FRUITS</string>
    <string name="Fruitsalad">Fruit salad</string>
    <string name="Grapes">Grapes</string>
    <string name="Greentea">Green tea</string>
    <string name="LeanBeef">Lean Beef</string>
    <string name="string_pushups">Initially, face-down prone position on the floor. Stretch your arms and touch the floor. Raise yourself by pushing the ground away from you. Repeat this.</string>
    <string name="string_squats">Stand with your legs a few inches apart. Stretch your arms to the front and bring the body down, till your thighs are parallel to the floor. Now come back to the initial position. Repeat it.</string>
    <string name="string_legRaise">Lie down on the ground. Raise your legs slowly until your feet are perpendicular to the ground. Now, slowly lower your legs. Repeat it.</string>
    <string name="string_jumpingJack">Initially, stand by keeping your feet, few inches wide. Now, just jump and extend your arms overhead with that slightly bend your knees and extend your legs. Now come back to the starting position and repeat this.</string>
    <string name="string_planWithLegFit">Be on your toes and forearms with your body straight. Raise your left leg with few seconds as its is possible. Now, lower left leg and raise your right leg. Now, vome back to initial position. Repeat this.</string>
    <string name="Lemon">Lemon</string>
    <string name="Lemonjuice">Lemon juice</string>
    <string name="Mealpaln">Meal plans</string>
    <string name="Meat">MEAT</string>
    <string name="Mushroom">Mushroom</string>
    <string name="Oatmealcookies">Oatmeal cookies</string>
    <string name="Oats">Oats</string>
    <string name="Oatswithskimmedmilk">Oats with skimmed milk</string>
    <string name="Pasta">Pasta</string>
    <string name="Pineappleorgrapes">Pineapple or grapes</string>
    <string name="Pineappleslices">Pineapple slices</string>
    <string name="Pineappleslicesorgrapes">Pineapple slices or grapes</string>
    <string name="Redrice">Red rice</string>
    <string name="Redricewithleafygreenspinachbroccoli">Red rice with leafy greens(spinach + broccoli)</string>
    <string name="Redricewithmushroom">Red rice with mushroom</string>
    <string name="RedricewithsteamcookedLeanbeef">Red rice with steam cooked Lean beef</string>
    <string name="Redricewithsteamcookedchickenbreasts">Red rice with steam cooked chicken breasts</string>
    <string name="Redricewithsteamcookedtuna">Red rice with steam cooked tuna</string>
    <string name="Ricecerealsandnuts">RICE, CEREALS &amp; NUTS</string>
    <string name="Skimmedmilk">Skimmed milk</string>
    <string name="Snacks">SNACKS</string>
    <string name="Steamcookedleanbeef">Steam cooked lean beef</string>
    <string name="Tomatosoup">Tomato soup</string>
    <string name="Vegetables">VEGETABLES</string>
    <string name="VegetablesaladCarrotcucumbercabbagelettuce">Vegetable salad(Carrot, cucumber, cabbage, lettuce)</string>
    <string name="Vegetablesoup">Vegetable soup</string>
    <string name="Walnuts">Walnuts</string>
    <string name="Wheatforwraps">Wheat for wraps</string>
    <string name="WholewheatchickenwrapChickenbreastslettucetomatoyogurtsauce">Whole wheat chicken wrap(Chicken breasts + lettuce + tomato + yogurt sauce)</string>
    <string name="WholewheatfishwrapSteamcookedtunalettucetomatoyogurtsauce">Whole wheat fish wrap(Steam cooked tuna + lettuce + tomato + yogurt sauce)</string>
    <string name="Wholewheatpastawithbroccoli">Whole wheat pasta with broccoli</string>
    <string name="Wholewheatpastawithsteamcookedsalmon">Whole wheat pasta with steam cooked salmon</string>
    <string name="Wholewheatpastawithveggies">Whole wheat pasta with veggies</string>
    <string name="WholewheatvegetablewrapTomatoonioncucumberspinachcheese">Whole wheat vegetable wrap(Tomato + onion + cucumber + spinach + cheese)</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abp_app_name">ActionBarPgoress</string>
    <string name="abvavgheight">Above Average Height</string>
    <string name="action_settings">Settings</string>
    <string name="age">Age</string>
    <string name="agerange">Age should be in range 5-100 years</string>
    <string name="alternater_heeltouch">ALTERNATER HEEL TOUCH</string>
    <string name="amazingapp">Hi, i am using this amazing app</string>
    <string name="app_content_msg">Your 5 stars rating are the best of our work for sure</string>
    <string name="app_give_fiv_ratings">Give 5 stars</string>
    <string name="app_suggestions">Suggestions</string>
    <string name="app_title_msg">We are small team dedicated to developing the best free apps for you!</string>
    <string name="app_title_rate_alert">We are small team dedicated to developing the best free apps for you!</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="arm_crunches">ARM CRUNCHES</string>
    <string name="asmaincourse1times">as main course *1 time</string>
    <string name="asmaincourse2times">as main course *2 times</string>
    <string name="asmaincourse3times">as main course *3 times</string>
    <string name="asmaincourse4times">as main course *4 times</string>
    <string name="asmaincourse5times">as main course *5 times</string>
    <string name="asmaincoursetimes">as main course *3 times</string>
    <string name="asmaincoursetwotimes">as main course *2 times</string>
    <string name="assnackfourtimes">as snack *4 times</string>
    <string name="assnackonetimes">as snack *1 times</string>
    <string name="assnackthreetimes">as snack *3 times</string>
    <string name="assnacktimes">as snack *4 times</string>
    <string name="avgheight">Average Height</string>
    <string name="awesome">and its awesome!</string>
    <string name="basic_crunches">BASIC CRUNCHES</string>
    <string name="excercise_done">Today Excercise Done!</string>
    <string name="belowaveraheheight">Below Average Height</string>
    <string name="bench_dips">BENCH DIPS</string>
    <string name="bicycle_crunches">BICYCLE CRUNCHES</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="bmikgm">BMI (KG/M²)</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="breakfast">Breakfast</string>
    <string name="brownbread">Brown bread</string>
    <string name="calculate">Calculate</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="feedback">Feedback</string>
    <string name="female">Female</string>
    <string name="ft">ft</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="in">in</string>
    <string name="kg">kg</string>
    <string name="languages">Languages</string>
    <string name="lb">lb</string>
    <string name="male">Male</string>
    <string name="meals_plan">Meals Plan</string>
    <string name="month">mth</string>
    <string name="next">NEXT</string>
    <string name="pause">PAUSE</string>
    <string name="rate_5_stars">Rate 5-Stars</string>
    <string name="rateus">Rate us</string>
    <string name="reminder">Reminder</string>
    <string name="restart_progress">Restart progress</string>
    <string name="resume">RESUME</string>
    <string name="share">Share</string>
    <string name="skip">SKIP</string>
    <string name="training_plan">Training Plan</string>
    <string name="weight">Weight</string>
    <string name="year">yr</string>
</resources>