<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="#ff00d1e8" android:paddingTop="15.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="22.0sp" android:textColor="#ffffffff" android:gravity="left" android:layout_gravity="center_horizontal" android:id="@+id/rate_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="15.0dip" android:layout_marginBottom="15.0dip" android:text="@string/app_title_msg" android:fontFamily="@font/gothic" />
        <TextView android:textSize="16.0sp" android:textColor="#ffffffff" android:gravity="left" android:layout_gravity="center_horizontal" android:id="@+id/text_content" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="15.0dip" android:layout_marginBottom="5.0dip" android:text="@string/app_content_msg" android:fontFamily="@font/gothic" />
    </LinearLayout>
    <LinearLayout android:layout_gravity="center" android:orientation="horizontal" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <ImageView android:layout_gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:src="@drawable/one" android:layout_weight="1.0" />
        <ImageView android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:src="@drawable/two" android:layout_weight="1.0" />
        <ImageView android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:src="@drawable/three" android:layout_weight="1.0" />
        <ImageView android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:src="@drawable/four" android:layout_weight="1.0" />
        <ImageView android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:src="@drawable/five" android:layout_weight="1.0" />
    </LinearLayout>
    <View android:background="#ffe1e1e1" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="10.0dip" />
    <LinearLayout android:layout_gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:layout_gravity="center" android:id="@+id/suggestion" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/app_suggestions" android:layout_weight="1.0" style="@style/Widget.AppCompat.Button.Borderless" />
        <Button android:textStyle="bold" android:textColor="#ff00d1e8" android:id="@+id/rateus" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/rate_5_stars" android:layout_weight="1.0" style="@style/Widget.AppCompat.Button.Borderless.Colored" />
    </LinearLayout>
</LinearLayout>