<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/restScreen" android:background="@drawable/ready_to_go_bg_image_blue" android:layout_width="fill_parent" android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:id="@+id/layout" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <RelativeLayout android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:textSize="12.0sp" android:textColor="@color/lightestgrey" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:text="@string/next" android:fontFamily="@font/roboto_medium" />
                    <TextView android:textSize="16.0sp" android:textColor="@color/colorPrimaryDark" android:id="@+id/nextExerciseName" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:text="TRUNK ROTATION" android:fontFamily="@font/roboto_medium" />
                    <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="@color/colorAccent" android:id="@+id/nextExerciseCycles" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:text="x30" />
                </LinearLayout>
                <kr.pe.burt.android.lib.faimageview.FAImageView android:id="@+id/nextExercisAnimation" android:layout_width="100.0dip" android:layout_height="100.0dip" android:layout_margin="5.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </RelativeLayout>
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
                <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/colorAccent" android:layout_gravity="center" android:id="@+id/pauseRestTime" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:layout_marginLeft="25.0dip" android:text="@string/pause" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/colorAccent" android:layout_gravity="center" android:id="@+id/resumeRestTime" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:layout_marginLeft="25.0dip" android:text="@string/resume" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                <FrameLayout android:layout_width="fill_parent" android:layout_height="180.0dip" android:layout_centerInParent="true">
                    <ProgressBar android:layout_gravity="center" android:id="@+id/rest_timer" android:layout_width="fill_parent" android:layout_height="180.0dip" android:indeterminate="false" android:progressDrawable="@drawable/shape_startex" style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal" />
                    <TextView android:textSize="50.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:layout_gravity="center" android:id="@+id/rest_counting" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="1" />
                </FrameLayout>
                <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:id="@+id/skipRestTime" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="25.0dip" android:text="@string/skip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </RelativeLayout>
            <LinearLayout android:orientation="vertical" android:id="@+id/nativeAdContainer" android:background="@android:color/white" android:paddingTop="3.0dip" android:paddingBottom="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_below="@+id/description_exDetail" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>